[gd_scene load_steps=5 format=3 uid="uid://e8m8upgwr36s"]

[ext_resource type="Script" path="res://scenes/Objects/Player/player.gd" id="1_50i1m"]
[ext_resource type="SpriteFrames" uid="uid://ckmkk6n51aj1" path="res://scenes/Objects/Player/Skins/Default.tres" id="2_8x5bw"]
[ext_resource type="PackedScene" uid="uid://u3a7h7qb4mxo" path="res://scenes/Objects/gun.tscn" id="6_kmort"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ev7vs"]
size = Vector2(5, 10)

[node name="Player" type="CharacterBody2D" groups=["player"]]
floor_snap_length = 3.0
script = ExtResource("1_50i1m")
friction = 0.0
coyote_time_frames = 20
jump_buffer_frames = 3
dash_speed = 50
dash_length_frames = 5
dash_delay_frames = 10

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." groups=["player"]]
use_parent_material = true
sprite_frames = ExtResource("2_8x5bw")
animation = &"idle"
frame_progress = 0.0190902

[node name="Area2D" type="Area2D" parent="." groups=["player"]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" groups=["player"]]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_ev7vs")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." groups=["player"]]
polygon = PackedVector2Array(3, 10, -3, 10, -3, 0, 3, 0)

[node name="Gun" parent="." instance=ExtResource("6_kmort")]
position = Vector2(2, 5)

[connection signal="dash_ended" from="." to="." method="_on_dash_ended"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
